Move MTIQ full-server tests into the mtiq variant module (CLM-43727) (#16996)
Co-authored-by: Joseph Stephens <jstephens@sonatype.com>